--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.6.0",
     "firebase": "^8.10.0",
+    "firebase-tools": "^9.21.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
